@@ -19,7 +19,7 @@ abstract class InsertBuilderBase() {
         return this as B
     }
 
-    internal fun <C> add(col: Column<C>, value: C?) {
+    protected fun <C> add(col: Column<C>, value: C?) {
         ct.put(col, value)
     }
 
